--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@fontsource/eb-garamond": "^4.5.11",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/space-grotesk": "^4.5.13",
+    "@react-three/fiber": "^8.12.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.12.2",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.23",
+    "sass": "^1.62.0",
+    "three": "^0.151.3"
   }
 }
